tests/NormalTests/paczka1/fuzzy1/47774187.err
Error in line 2: wKQwV2fxK A407 49,9
Error in line 4: wKQwV2fxK A304 93,2
Error in line 6: A304 A986 280,96
Error in line 5: wKQwV2fxK A986 99,9
Error in line 10: wKQwV2fxK A304 28,8
Error in line 12: Yi8 A986 88,1
Error in line 27: wKQwV2fxK A986 77,7
Error in line 28: wKQwV2fxK S293 15,3
Error in line 26: 44OmOK10 A407 13,3
